--- a/Layaout/Index.html
+++ b/Layaout/Index.html
@@ -54,56 +54,81 @@
             </header>
         </section>
         <section class="aside">
-            <aside class="inner-asside">
-                <ul>
-                    <li>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto optio aliquid natus eaque
-                        sapiente inventore sequi iusto modi, debitis veniam maxime ad dolorum laudantium, cum labore.
-                        Qui
-                        fugit ex alias!
-                    </li>
-                    <li>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laborum, necessitatibus sit,
-                        quasi,
-                        eligendi ab illum incidunt vitae ut dignissimos hic non placeat. At reiciendis nesciunt,
-                        consequatur
-                        doloremque mollitia magnam.
-                    </li>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nemo voluptatum vel esse
-                        delectus
-                        rem nesciunt maxime facilis magni doloremque quidem labore dolore tenetur fuga, voluptate iure!
-                        Corrupti, aliquam quisquam.</li>
-                </ul>
-            </aside>
+            <div class="asside-1">
+                <aside class="inner-asside">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <button type="button" class="btn btn-outline-warning" id="button">Sobre nosotros</button>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <button type="button" class="btn btn-outline-warning" id="button">Por que nosotros</button>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <button type="button" class="btn btn-outline-warning" id="button">Nuestros trabajos</button>
+                            </a>
+                        </li>
+                    </ul>
+                </aside>
+            </div>
         </section>
 
         <section class="Info">
-            <article>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae fugiat laborum dolore maiores velit
-                quia assumenda modi distinctio, rerum quae doloremque quis suscipit in. Earum voluptates eligendi
-                voluptatum. Quas, explicabo!
-            </article>
-            <article>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad magnam eveniet omnis in aut, culpa ipsum
-                reprehenderit sunt nisi ratione delectus deserunt cupiditate non quos aspernatur earum eaque optio
-                veritatis?
-            </article>
-            <article>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure commodi quod cum perspiciatis qui
-                cupiditate
-                illo et recusandae nam quam esse repellendus enim maxime, quibusdam excepturi assumenda maiores iste
-                omnis.
-            </article>
+            <div class="info-1">
+                <div class="inner-info">
+                    <article>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae fugiat laborum dolore
+                        maiores velit
+                        quia assumenda modi distinctio, rerum quae doloremque quis suscipit in. Earum voluptates
+                        eligendi
+                        voluptatum. Quas, explicabo!
+                    </article>
+                    <article>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad magnam eveniet omnis in aut, culpa
+                        ipsum
+                        reprehenderit sunt nisi ratione delectus deserunt cupiditate non quos aspernatur earum eaque
+                        optio
+                        veritatis?
+                    </article>
+                    <article>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure commodi quod cum perspiciatis qui
+                        cupiditate
+                        illo et recusandae nam quam esse repellendus enim maxime, quibusdam excepturi assumenda maiores
+                        iste
+                        omnis.
+                    </article>
+                    <article>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque facilis, officiis optio error
+                        quasi placeat ad dolores provident quae nesciunt quam quia earum ratione exercitationem quis ab,
+                        voluptas temporibus ipsam.
+                    </article>
+                    <article>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur deserunt eos incidunt alias ut
+                        ipsa est, accusantium quam placeat atque voluptate minima nesciunt eveniet repellat doloribus
+                        voluptatum at. Nobis, nam.
+                    </article>
+
+                </div>
+            </div>
         </section>
-
+        <br>
         <section class="footer">
-            <footer>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero veniam obcaecati iure deserunt animi fuga
-                aut
-                nam ipsa distinctio eius. Non totam reiciendis, beatae obcaecati odit ratione voluptates voluptatibus
-                aspernatur.
-            </footer>
-
+            <div class="footer-1">
+                <div class="inner-footer">
+                    <footer>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero veniam obcaecati iure deserunt
+                        animi fuga
+                        aut
+                        nam ipsa distinctio eius. Non totam reiciendis, beatae obcaecati odit ratione voluptates
+                        voluptatibus
+                        aspernatur.
+                    </footer>
+                </div>
+            </div>
         </section>
 
     </div>
